objects/Enrollee_Blacklist__c.object
<CustomObject>
    <description>Holds the email address that should be denied access to enrollments.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollee Blacklist</relationshipLabel>
        <relationshipName>Enrollee_Blacklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enterprise_Training_Agreement__c</fullName>
        <label>Enterprise Training Agreement</label>
        <referenceTo>Enterprise_Training_Agreement__c</referenceTo>
        <relationshipLabel>Enrollee Blacklist</relationshipLabel>
        <relationshipName>Enrollee_Blacklist</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Enrollee Blacklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EBL-{0000}</displayFormat>
        <label>Enrollee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollee Blacklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EmailOrContactRequired</fullName>
        <active>true</active>
        <description>Either the email or the contact lookup must be filled in.</description>
        <errorConditionFormula>AND( ISBLANK( Email__c ), ISBLANK(  Contact__c ) )</errorConditionFormula>
        <errorMessage>Either the Email address or the Contact must be specified to create a blacklisted enrollee.</errorMessage>
    </validationRules>
</CustomObject>